# DefaultProject

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  appveyor.yml
cmake/: compilation_settings.cmake  doxygen_settings.cmake  internal_utils.cmake  testing_settings.cmake
include/DEFAULT_PROJECT/: Application.hpp  Version.hpp.in  program.hpp  version.hpp  version.hpp.in
source/: Application.cpp  main.cpp  program.cpp
sources/: main.cpp  terrain-rendering.hpp.in
