#
# \file CMakeList.txt
#
# \brief CMakeList used to generate a default project.
#
# \author Louis Martin-Pierrat
#
# \version 1.0.0
#
# \date September 30, 2015
#

## CMAKE INITIALISATION

PROJECT(DEFAULT_PROJECT)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/cmake_modules)

## END CMAKE INITIALISATION



## PROJECT VERSION

SET(PROJECT_VERSION_MAJOR 1)
SET(PROJECT_VERSION_MINOR 0)
SET(PROJECT_VERSION_PATCH 0)
SET(PROJECT_VERSION_EXTRA 0)

SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
SET(PROJECT_VERSION_FULL ${PROJECT_VERSION}.${PROJECT_VERSION_EXTRA})

CONFIGURE_FILE(
    ${CMAKE_SOURCE_DIR}/sources/project.hpp.in
    ${CMAKE_SOURCE_DIR}/sources/project.hpp
    )

## END PROJECT VERSION



## FIND LIBRARY DEPENDENCY

##



## PROJECT LANGUAGE

ENABLE_LANGUAGE(CXX)

## END PROJECT LANGUAGE



## PROJECT SOURCES FILES

SET(PROJECT_SOURCES_FILES
    sources/main.cpp
    )

## END PROJECT SOURCES FILES



## PROJECT INCLUDES FILES

SET(PROJECT_INCLUDES_FILES
    sources/project.hpp
    )

## END PROJECT INCLUDES FILES



## PROJECT INCUDES DIRECTORIES

SET(PROJECT_INCLUDES_DIRECTORIES
    sources/
    )

INCLUDE_DIRECTORIES(${PROJECT_INCLUDES_DIRECTORIES})

## PROJCET INCLUDES DIRECTORIES



## PROJECT SETTINGS

IF (CMAKE_BUILD_TYPE MATCHES "debug")

    SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} -D__DEBUG__)
    SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/debug/)

ELSE ()

    SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/release/)

ENDIF ()

## END PROJECT SETTINGS



## BINARY SETTINGS

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES_FILES})

## END BINARY SETTINGS



## LIBRARY SETTINGS

## END LIBRARY SETTINGS



## COMPILATION SETTINGS

##



## DOXYGEN CONFIGURATION

FIND_PACKAGE(Doxygen)

IF (DOXYGEN_FOUND)

    CONFIGURE_FILE(
        ${CMAKE_SOURCE_DIR}/Doxyfile.in
        ${CMAKE_BINARY_DIR}/Doxyfile
        @ONLY)

    ADD_CUSTOM_TARGET(doc
        ${DOXYGEN_EXECUTABLE} ${CMAKE_BINARY_DIR}/Doxyfile
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/sources
        COMMENT "Generating API documentation with Doxygen" VERBATIM
        )

ENDIF (DOXYGEN_FOUND)

## END DOXYGEN CONFIGURATION

